--- a/style/style.css
+++ b/style/style.css
@@ -236,7 +236,7 @@ body{
     position: absolute;
     left: 45%;
     top: 22%;
-    width: 14%;
+    width: 12%;
     height: 5%;
     background-color: #fafafa;
     border-radius: 10px;
@@ -372,8 +372,8 @@ body{
     }
 
     .container1{
-        width: 50vw;
-        height: 30vh;
+        width: 55vw;
+        height: 25vh;
         float: left;
     }
 
@@ -422,11 +422,74 @@ body{
     .date{
         position: absolute;
         white-space: nowrap;
-        font-size: 9px;
-        top: 2%;
+        font-size: 12px;
+        top: -10%;
         left: 0px;
     }
     
+    .container2{
+        position: absolute;
+        left: 35%;
+        top: 55%;
+        width: 50%;
+        height: 15%;
+        background-color: rgb(255, 255, 255);
+        border-radius: 10px;   
+        white-space: nowrap;
+        flex: content;
+    }
 
+    .today{
+        font-family: 'Crimson Text', serif;
+        position: absolute;
+        left: 25%;
+        top: 70%;
+        font-weight: 900;
+        font-size: 24px;
+        text-decoration: underline;
+    }
+
+    .container3{
+        position: absolute;
+        left: 25%;
+        top: 80%;
+        width: 22%;
+        height: 18%;
+        background-image: linear-gradient(#d4c2c2 , #6d388b);
+        border-radius: 10px;    
+    }
+
+    .container4{
+        position: absolute;
+        left: 50%;
+        top: 80%;
+        width: 22%;
+        height: 18%;
+        background-image: linear-gradient(#fafafa , #eeeeee);
+        border-radius: 10px;    
+    }
+
+    .container5{
+        position: absolute;
+        left: 75%;
+        top: 80%;
+        width: 22%;
+        height: 18%;
+        background-image: linear-gradient(#fafafa , #eeeeee);
+        border-radius: 10px;    
+    }
+
+    .time1 , .time2 , .time3 {
+        white-space: nowrap;
+        font-size: smaller;
+        left: 2px;
+    }
+
+    .rain , .sun{
+        width: 10vw;
+        height: 9vh;
+        position: absolute;
+        left: 21px;
+    }
 
   }
