--- a/style/style.css
+++ b/style/style.css
@@ -9,14 +9,13 @@ body{
     height: 100%;
     background-image: linear-gradient(#304879 , #8AA7E0 , #EEA7E3 );
     position: absolute;
-    left: 0.4px;
-    top: 0.3px;
+    display: flexbox;
 }
 .searchbtn {
     width: 20vw; /* Use relative unit */
     height: 7vh; /* Use relative unit */
     z-index: 2;
-    border-radius: 10px;
+    border-radius: 5vh;
     align-items: center;
     position: absolute;
     left: 40%;
@@ -28,15 +27,13 @@ body{
 .state {
     font-family: 'Crimson Text', serif;
     position: absolute;
-    width: 100%;
-    height: 20px;
-    font-size: 38px;
+    left: 45%;
+    top: 5%;
+    font-size: 6vh;
     font-weight: bold;
     color: black;
     white-space: nowrap;
-    padding: 2 , 2 , 2 , 2;
-    text-align: center;
-    top: 5%;
+    display: grid;
   }
   
 
@@ -45,8 +42,6 @@ body{
     position: absolute;
     left: 48%;
     top: 14%;
-    width: 100px;
-    height: 20px;
     font-size: 18px;
     font-weight: bold;
     color: black;
@@ -128,18 +123,18 @@ body{
 
 .clouds{
     position: absolute;
-    left: 180px;
-    top: 12px;
+    left: 35%;
+    top: 10%;
     z-index: 1;
-    width:20%;
-    height: 50%;
+    width:17%;
+    height: 40%;
     display: flex;
 }
 
 .temp{
     font-family: 'Crimson Text', serif;
     position: absolute;
-    left: 42%;
+    left: 37%;
     top: 39%;
     font-weight: bolder;
     color: #000000;
@@ -150,8 +145,8 @@ body{
 .weath{
     font-family: 'Crimson Text', serif;
     position: absolute;
-    left: 200px;
-    top: 120px;
+    left: 37%;
+    top: 65%;
     font-weight: bolder;
     color: #000000;
     z-index: 3;
@@ -159,8 +154,8 @@ body{
 }
 
 .drop1{
-    width: 40px;
-    height: 40px;
+    width: 10%;
+    height: 36%;
     margin: 2 5 2 2;
     padding: 4 4 4 4;
     position: absolute;
@@ -233,8 +228,8 @@ body{
 
 .clouds1{
     position: absolute;
-    left: 25px;
-    top: 25px;
+    left: 25%;
+    top: 25%;
     z-index: 1;
     width:45%;
     height: 45%;
@@ -337,11 +332,9 @@ body{
 
     .state{
         position: absolute;
-        place-content: center;
         font-size: 28px;
         top: 6%;
-        left: 25px;
-        float: left;
+        left: 40%;
     }
 
     .time{
