--- a/style/style.css
+++ b/style/style.css
@@ -311,12 +311,12 @@ body{
 
 @media screen and (max-width: 600px) { 
     .searchbtn {
-        width: 20vw; /* Use relative unit */
+        width: 28vw; /* Use relative unit */
         height: 5.5vh; /* Use relative unit */
         z-index: 2;
         border-radius: 20px;
         position: absolute;
-        left: 40%;
+        left: 38%;
         top: 2%;
         border-color: bisque;
         border-width: 1px;
@@ -324,19 +324,19 @@ body{
     
     .btn {
         position: absolute;
-        right: 2%; /* Use relative unit */
+        left: 66%; /* Use relative unit */
         top: 2%; /* Use relative unit */
         width: 12vw; /* Use relative unit */
         height: 5.5vh; /* Use relative unit */
         background-color: #fafafa;
-        border-radius: 10px;
+        border-radius: 15px;
         z-index: 3;
     }
 
     .state{
         position: absolute;
-        font-size: 28px;
-        top: 6%;
+        font-size: 30px;
+        top: 8%;
         left: 40%;
     }
 
@@ -351,8 +351,10 @@ body{
 
     .container1{
         width: 55vw;
-        height: 25vh;
-        float: left;
+        height: 22vh;
+        position: absolute;
+        left: 30%;
+        top: 28%;
     }
 
     .clouds{
@@ -360,38 +362,35 @@ body{
         width: 20vw;
         float: right;
         position: absolute;
-        top: 19%;
-        left: 17%;
+        top: 14%;
+        left: 26%;
     }
 
     .temp{
         position: absolute;
-        left: 25%;
+        left: 28%;
         top: 40%;
         font-weight: bolder;
         color: #000000;
         z-index: 3;
-        font-size: 30px;
-        float: right;
+        font-size: 24px;
     }
 
     .weath{
         position: absolute;
-        left: 18%;
+        left: 20%;
         top: 65%;
         font-weight: bolder;
         color: #000000;
         z-index: 3;
         font-size: 25px;
-        display: flex;
-        float: right;
     }
 
     .container6{
         position: absolute;
         left: 45%;
-        top: 22%;
-        width: 27vw;
+        top: 26%;
+        width: 29vw;
         height: 5vh;
         display: flex;
         float: right;
@@ -400,7 +399,7 @@ body{
     .date{
         position: absolute;
         white-space: nowrap;
-        font-size: 12px;
+        font-size: 10px;
         top: -10%;
         left: 0px;
     }
@@ -473,7 +472,7 @@ body{
     }
 
     .btnname{
-        font-size: 6px;
+        font-size: 9px;
     }
 
   }
