--- a/style/style.css
+++ b/style/style.css
@@ -350,10 +350,10 @@ body{
     }
 
     .container1{
-        width: 55vw;
+        width: 60vw;
         height: 22vh;
         position: absolute;
-        left: 30%;
+        left: 27%;
         top: 28%;
     }
 
@@ -363,12 +363,12 @@ body{
         float: right;
         position: absolute;
         top: 14%;
-        left: 26%;
+        left: 32%;
     }
 
     .temp{
         position: absolute;
-        left: 28%;
+        left: 33%;
         top: 40%;
         font-weight: bolder;
         color: #000000;
@@ -378,7 +378,7 @@ body{
 
     .weath{
         position: absolute;
-        left: 20%;
+        left: 33%;
         top: 65%;
         font-weight: bolder;
         color: #000000;
@@ -388,7 +388,7 @@ body{
 
     .container6{
         position: absolute;
-        left: 45%;
+        left: 44%;
         top: 26%;
         width: 29vw;
         height: 5vh;
@@ -402,33 +402,60 @@ body{
         font-size: 10px;
         top: -10%;
         left: 0px;
+        display: grid;
     }
     
     .container2{
         position: absolute;
-        left: 35%;
+        left: 32%;
         top: 55%;
         width: 50%;
         height: 15%;
         background-color: rgb(255, 255, 255);
         border-radius: 10px;   
         white-space: nowrap;
-        flex: content;
+    }
+
+    .drop1{
+        width: 19%;
+        height: 36%;
+        position: absolute;
+        left: 8%;
+        top: 15%;
+    }
+
+    .wind1{
+        width: 20%;
+        height: 30%;
+        position: absolute;
+        left: 40%;
+        top: 17%;
+    }
+    .rain1{
+        width: 20%;
+        height: 30%;
+        position: absolute;
+        left: 75%;
+        top: 17%;
+    }
+
+    .data1 , .data2 , .data3{
+        font-size: 13px;
     }
 
     .today{
-        font-family: 'Crimson Text', serif;
+        
         position: absolute;
-        left: 25%;
+        left: 17%;
         top: 70%;
         font-weight: 900;
-        font-size: 24px;
+        font-size: 20px;
         text-decoration: underline;
     }
 
     .container3{
         position: absolute;
-        left: 25%;
+        left: 15%;
         top: 80%;
         width: 22%;
         height: 18%;
@@ -440,7 +467,7 @@ body{
 
     .container4{
         position: absolute;
-        left: 50%;
+        left: 45%;
         top: 80%;
         width: 22%;
         height: 18%;
@@ -466,13 +493,20 @@ body{
 
     .rain , .sun{
         width: 10vw;
-        height: 9vh;
+        height: 8vh;
         position: absolute;
         left: 21px;
     }
 
+    .future{
+        font-size: large;
+        position: absolute;
+    }
+
     .btnname{
-        font-size: 9px;
+        font-size: 7px;
     }
 
   }
+
+  
