--- a/style/style.css
+++ b/style/style.css
@@ -345,7 +345,7 @@ body{
         position: absolute;
         font-size: 30px;
         top: 8%;
-        left: 33%;
+        left: 35%;
     }
 
     .time{
@@ -353,7 +353,7 @@ body{
         font-size: 18px;
         font-weight: bold;
         color: black;
-        left: 45%;
+        left: 47%;
     }
 
     .container1{
@@ -361,7 +361,7 @@ body{
         height: 22vh;
         position: absolute;
         left: 24%;
-        top: 24%;
+        top: 23%;
     }
 
     .clouds{
@@ -396,7 +396,7 @@ body{
     .container6{
         position: absolute;
         left: 40%;
-        top: 22%;
+        top: 21%;
         width: 31%;
         height: 3.5%;
         display: flex;
@@ -497,6 +497,7 @@ body{
         font-size: small;
         font-weight: bold;
         left: 20%;
+        top: 8%;
         position: absolute;
     }
 
@@ -532,8 +533,10 @@ body{
         
     }
 
-    .degree3{
+    .degree1 , .degree2 , .degree3{
         left: 20%;
+        top: 65%;
+        font-family: 'Courier New', Courier, monospace;
         color: #000000;
     }
 
